<resources>
    <string name="app_name">VangtiChai</string>
    <string name="taka_label">Taka:</string>
    <string name="initial_amount">0</string>
    <string name="initial_note_count">0</string>
    <string name="note_500">500:</string>
    <string name="note_100">100:</string>
    <string name="note_50">50:</string>
    <string name="note_20">20:</string>
    <string name="note_10">10:</string>
    <string name="note_5">5:</string>
    <string name="note_2">2:</string>
    <string name="note_1">1:</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_clear">CLEAR</string>
</resources>
